--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
   "dependencies": {
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "firebase": "^6.3.4",
     "firebaseui": "^4.1.0",
-    "firebase": "^6.3.4"
+    "simple-youtube-api": "^5.2.1",
+    "socket.io": "^2.2.0",
+    "ytdl": "^0.12.0"
   },
   "devDependencies": {},
   "scripts": {
